Updated information for Daniel Larson

--- a/candidates.yaml
+++ b/candidates.yaml
@@ -16,11 +16,12 @@
   twitterHandle: EricRothmuller
   websiteLink: "https://ericrothmuller.com"
   donationLink: "https://secure.actblue.com/donate/eric-rothmuller-for-KY-1"
-- name: "Daniel Richard Larson"
+- name: "Daniel Larson"
   runningFor: senate
   state: MT
   twitterHandle: DanforMontana
-  websiteLink: "https://www.youtube.com/watch?v=UgaIntqv0nc"
+  websiteLink: "http://www.danformontana.com/"
+  donationLink: "http://www.danformontana.com/donations"
 - name: "Michael Chantry Knoles"
   runningFor: senate
   state: MT
